<resources>
    <string name="app_name">Bedside Chats</string>
    <string name="title_height">550dp</string>
    <string name="title_width">360dp</string>
    <string name="font">sans-serif-condensed-light</string>
    <string name="fontTitle">sans-serif-condensed</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continue_guest">Continue as Guest</string>
    <string name="select_option">Select an option</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="select_provider">Select a card deck based on your healthcare provider</string>
    <string name="cards">Cards</string>
    <string name="saved">Saved</string>
    <string name="notes">Notes</string>
    <string name="provider">Providers</string>
    <string name="instruction_button">Instructions</string>
    <string name="next_button">Next</string>
    <string name="new_user_sign_up">New user? Sign up</string>
    <string name="new_user_select_language">New user? Select a language</string>
    <string name="account">Account</string>
    <string name="error">Failed to load.</string>
    <string name="recent_deck">Last deck used:</string>
    <string name="all_questions">All questions</string>
    <string name="saved_questions">Saved questions</string>
    <string name="different_deck">Different deck</string>
    <string name="tap_to_save">Tap to save</string>
    <string name="tap_to_unsave">Tap to unsave</string>
    <string name="done">Done</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="no_recent_deck">You have no recently selected deck!</string>
    <string name="no_saved_questions">You have no saved questions!</string>
    <string name="no_saved_notes">No notes added for this question.</string>
    <string name="question">Question</string>
    <string name="failed_instructions">Failed to load instructions. Try going back a page and choosing a different provider.</string>
    <string name="blank_field">One or more fields are blank!</string>
    <string name="failed_auth">Authentication failed.</string>
    <string name="loading_wait">Loading... Please wait.</string>
    <string name="password_match">Passwords do not match.</string>
    <string name="username_taken">Username is taken!</string>
    <string name="user_created">User Created!</string>
    <string name="write_notes_here">Write Notes Here:</string>
</resources>
