<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

<!--    <Button-->
<!--        android:id="@+id/logout_button_home_port"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="120dp"-->
<!--        android:layout_marginTop="@dimen/portrait_margin_top"-->
<!--        android:background="@drawable/rounded_corner_button"-->
<!--        android:text="@string/logout"-->
<!--        android:textColor="@color/whiteFont"-->
<!--        android:textSize="50sp"-->
<!--        app:fontFamily="@string/font"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.95"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/title_textView_home_port" />-->

    <!--        app:layout_constraintTop_toBottomOf="@+id/logout_button_home_port"-->

    <TextView
        android:id="@+id/title_textView_home_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/portrait_margin_top"
        android:background="@drawable/background"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/whiteFont"
        android:textSize="120sp"
        app:fontFamily="@string/fontTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_textView_home_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/portrait_margin_top"
        android:text="@string/select_option"
        android:textAlignment="center"
        android:textColor="@color/whiteFont"
        android:textSize="80sp"
        app:fontFamily="@string/font"
        app:layout_constraintBottom_toTopOf="@+id/lastDeck_textView_home_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView_home_port" />

    <TextView
        android:id="@+id/lastDeck_textView_home_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/portrait_margin_top"
        android:text="@string/recent_deck"
        android:textAlignment="center"
        android:textColor="@color/whiteFont"
        android:textSize="60sp"
        app:fontFamily="@string/font"
        app:layout_constraintBottom_toTopOf="@+id/cards_button_home_port"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_textView_home_port"/>

    <Button
        android:id="@+id/cards_button_home_port"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/portrait_margin_top"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/all_questions"
        android:textColor="@color/whiteFont"
        android:textSize="50sp"
        app:fontFamily="@string/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastDeck_textView_home_port" />

    <Button
        android:id="@+id/saved_button_home_port"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/portrait_margin_top"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/saved_questions"
        android:textColor="@color/whiteFont"
        android:textSize="50sp"
        app:fontFamily="@string/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cards_button_home_port" />

    <Button
        android:id="@+id/provider_button_home_port"
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/portrait_margin_top"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/different_deck"
        android:textColor="@color/whiteFont"
        android:textSize="50sp"
        app:fontFamily="@string/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saved_button_home_port" />


<!--    <Button-->
<!--        android:id="@+id/signout_button_home_port"-->
<!--        android:layout_width="250dp"-->
<!--        android:layout_height="120dp"-->
<!--        android:layout_marginTop="@dimen/portrait_margin_top"-->
<!--        android:background="@drawable/rounded_corner_button"-->
<!--        android:text="@string/logout"-->
<!--        android:textColor="@color/whiteFont"-->
<!--        android:textSize="50sp"-->
<!--        app:fontFamily="@string/font"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.9"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/provider_button_home_port" />-->

</androidx.constraintlayout.widget.ConstraintLayout>